# medhia

backend/: Cargo.toml  rustfmt.toml
backend/migrations/: 20241127002418_create_table_user.down.sql  20241127002418_create_table_user.up.sql  20241130113904_create_table_conversation.down.sql  20241130113904_create_table_conversation.up.sql  20241130120229_create_table_conversation_participant.down.sql  20241130120229_create_table_conversation_participant.up.sql  20241130121714_create_table_message.down.sql  20241130121714_create_table_message.up.sql
backend/src/: main.rs
backend/src/auth/: extractor.rs  handler.rs  mod.rs  model.rs
backend/src/auth/service/: mod.rs  read.rs  write.rs
backend/src/chat/: mod.rs
backend/src/chat/conversation/: handler.rs  model.rs
backend/src/chat/conversation/repo/: read.rs  write.rs
backend/src/chat/conversation/service/: read.rs  write.rs
backend/src/chat/message/: handler.rs  mod.rs  model.rs
backend/src/chat/message/repo/: read.rs  write.rs
backend/src/chat/participant/: model.rs
backend/src/chat/participant/repo/: read.rs  write.rs
backend/src/common/: config.rs  database.rs  json.rs  mod.rs  model.rs  state.rs
backend/src/user/: handler.rs  mod.rs  model.rs
backend/src/user/repo/: read.rs  write.rs
backend/src/user/service/: read.rs  write.rs
frontend/: .gitignore  .prettierrc  package.json
frontend/src/routes/: about.tsx  contact.tsx
