[package]
name = "medhia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws", "macros"] }
bcrypt = "0.16.0"
chrono = {version = "0.4.38", features = ["serde", "default"]}
sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.215", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["trace"] }
jsonwebtoken = "9.3.0"
validator = { version = "0.19.0", features = ["derive"] }
serde_json = "1.0.133"
tower = "0.5.1"
futures-util = "0.3.31"
